// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxAccordion customize 1`] = `
<div>
  <div
    class="accordion bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxAccordion component 1`] = `
<div>
  <div
    class="accordion"
  >
    Test
  </div>
</div>
`;
